20000514-12:20 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.y
    + Seperated the DECLARE... from Function, moved into a Declare, and Added Declare as type of Source.
    ! Added reset of hb_comp_iVarScope to DECLARE... to fix wrong "Statement not allowed outside of procedure or function"


   * source/compiler/hbgenerr.c
     * Modified : "3Duplicate Declaration of %s \'%s\'" to accept 1st parameter type of redeclaration ( Function, Class, Method ).

   * source/compiler/harbour.c
     * Modified calls to hb_compGenWarning() to use additional parameter of redclaration type.

20000514-10:07 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.l
    ! Fixed parse error when DO OPTIONAL WITH 1 or " or other non alpha charcaters
    ! Fixed parse error when FOR Var := OPTIONAL TO ...

20000514-09:45 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.y
    ! Fixed GPF when using DECLARE CLASS and -w < 3

  * source/compiler/harbour.c
    ! Fixed GPF when using DECLARE CLASS and -w < 3

20000514-09:10 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.l
    ! Fixed parse error when DO OPTIONAL WITH ...
    * Changed FROM to FROM CLASS in AS Obect FROM CLASS ... (fixed conflict of FROM with DO FROM ...)
    * Changed AS ... ARRAY to AS ARRAY OF ...

20000514-14:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
	* fixed bug in line counting that was causing no code
	generated for statements placed within BEGIN/END SEQUENCE

20000513-14:50 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.h
	* added 'int iDeclLine' to VAR structure to hold the line number
	where a variable was declared

    *source/compiler/harbour.c
    *source/compiler/harbour.y
	* fixed generation of 'unreachable code' warnings
	* warnings for declared but not used variable reports the line
	number where this variable was declared
