@@ -491,7 +491,7 @@ void hb_compVariableAdd( char * szVarName, BYTE cValueType )
       if ( hb_comp_iWarnings < 3 )
          return;
 
-      //printf( "\nAdding parameter: %s Type: %c\n", szVarName, cValueType );
+      printf( "\nAdding parameter: %s Type: %c\n", szVarName, cValueType );
 
       hb_comp_pLastMethod->iParamCount++;
 
@@ -556,7 +556,10 @@ void hb_compVariableAdd( char * szVarName, BYTE cValueType )
 
       pVar->pClass = hb_compClassFind( hb_comp_szClass );
       if( ! pVar->pClass )
+      {
          hb_compGenWarning( hb_comp_szWarnings, 'W', HB_COMP_WARN_CLASS_NOT_FOUND, hb_comp_szClass, szVarName );
+         pVar->cType = 'O';
+      }
    }
 
    if ( hb_comp_iVarScope & VS_PARAMETER )
@@ -804,7 +807,7 @@ PCOMCLASS hb_compClassAdd( char * szClassName )
 {
    PCOMCLASS pClass;
 
-   //printf( "\nDeclaring Class: %s\n", szClassName );
+   printf( "\nDeclaring Class: %s\n", szClassName );
 
    if ( hb_comp_iWarnings < 3 )
       return NULL;
@@ -857,7 +860,7 @@ PCOMMETHOD hb_compMethodAdd( PCOMCLASS pClass, char * szMethodName )
 {
    PCOMMETHOD pMethod;
 
-   //printf( "\nDeclaring Method: %s of Class: %s\n", szMethodName, pClass->szName );
+   printf( "\nDeclaring Method: %s of Class: %s\n", szMethodName, pClass->szName );
 
    if ( hb_comp_iWarnings < 3 )
       return NULL;
@@ -911,6 +914,8 @@ PCOMDECLARED hb_compDeclaredAdd( char * szDeclaredName )
 
    if ( hb_comp_iWarnings < 3 )
       return NULL;
+
+   printf( "\nDeclaring Function: %s\n", szDeclaredName, NULL );
 
    if ( ( pDeclared = hb_compDeclaredFind( szDeclaredName ) ) != NULL )
    {
